[gd_scene load_steps=8 format=2]

[ext_resource path="res://boosts/sprites/freeSwapNormal.png" type="Texture" id=1]
[ext_resource path="res://boosts/scripts/freeSwapBoost.gd" type="Script" id=2]
[ext_resource path="res://debug/sounds/confirm.wav" type="AudioStream" id=3]
[ext_resource path="res://debug/sounds/deny.wav" type="AudioStream" id=4]
[ext_resource path="res://boosts/sprites/singleHighlight.png" type="Texture" id=5]
[ext_resource path="res://boosts/sprites/freeSwapPressed.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "returnToButton"
length = 0.2
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("deny")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.201 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "alertButton"
}, {
"args": [  ],
"method": "removeSelf"
} ]
}

[node name="freeSwapBoost" type="Node2D"]
script = ExtResource( 2 )

[node name="singleHighlight" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
centered = false

[node name="sprite0" type="Sprite" parent="."]
scale = Vector2( 1.4, 1.4 )
z_index = 2
texture = ExtResource( 1 )

[node name="sprite1" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 6 )

[node name="animator" type="AnimationPlayer" parent="."]
anims/returnToButton = SubResource( 1 )

[node name="confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="deny" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"
